2005-10-13  Donnie Berkholz  <spyderous@gentoo.org>

	* configure.ac: Add XTRAP_LIB to XPRINT_EXTENSIONS to fix xprint build when
	xtrap is enabled.

2005-10-13  Donnie Berkholz  <spyderous@gentoo.org>

	* configure.ac: Require glproto >= 1.4.1 if building DRI with GLX. This
	fixes a build failure on a number of hyperpipe functions.

2005-10-13  Alan Coopersmith  <alan.coopersmith@sun.com>

	* hw/xfree86/utils/xorgconfig/Makefile.am (EXTRAMANDEFS): 
	Set substitutions needed in xorgconfig man page.

2005-10-13  Kristian Høgsberg  <krh@redhat.com>

	* hw/xfree86/xf4bpp/Makefile.am (libxf4bpp_la_SOURCES): Dist NOTES.

	* hw/xfree86/xf1bpp/Makefile.am (EXTRA_DIST): Dist helper shell
	scripts.

	* hw/xfree86/xaa/Makefile.am (EXTRA_DIST): Dist XAA.HOWTO and a
	few more unused C files.

	* hw/xfree86/Makefile.am (EXTRA_DIST): Dist xorgconf.cpp.

	* hw/xfree86/doc/Makefile.am (EXTRA_DIST): Fix DIST_EXTRA typo.

	* hw/dmx/config/Makefile.am (MAINTAINERCLEANFILES): Clean yacc and
	lex generated files only during make maintainer-clean as we don't
	expect users to have those tools installed.

2005-10-12  Eric Anholt  <anholt@FreeBSD.org>

	* hw/xfree86/common/Makefile.am:
	Remove an RM line that appears unnecessary and was breaking the build
	at xf86DefModeSet.c with FreeBSD make, where RM was undefined.  While
	here, make the build of xf86DefModeSet.c depend on its sources, so it'll
	rebuild properly, and make it a normal CLEANFILE rather than a
	DISTCLEANFILE, since the intention seems to be to build it at the user's
	build time.

2005-10-11  Kevin E. Martin  <kem-at-freedesktop-dot-org>

	* hw/darwin/Makefile.am:
	Fix typo (DIST_EXTRA -> EXTRA_DIST)

2005-10-09  Alan Coopersmith  <alan.coopersmith@sun.com>

	* Xext/Makefile.am: 
	Bug #4715 <https://bugs.freedesktop.org/show_bug.cgi?id=4715>
	Add SecurityPolicy to EXTRA_DIST (Bill Crawford)

2005-10-07  Kristian Høgsberg  <krh@redhat.com>

	* Xprint/Makefile.am:
	* Xprint/etc/Makefile.am: