@@ -1,0 +1,1 @@
+EXTRA_DIST = sco_init.c sco_io.c sco_iop.c sco_mouse.c sco_video.c VTsw_sco.c
